hw_13/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw13-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hw13-service
  template:
    metadata:
      labels:
        app: hw13-service
    spec:
      containers:
        - name: hw13-service
          image: denisdataops/hw13-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 20
