hw_13/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw13-service
spec:
  selector:
    app: hw13-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
